libraries/ckit/regression/valid-programs/a43.c
int main () {
  int *i, *j;
  i = j+1;

  return 0;
}
